Fix the gap between header and menu

--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -126,6 +126,7 @@
             margin-top: 44px;
         }
         &__mob {
+            top: 80px;
             border-top: 1px solid #e9e9e9;
             padding: 60px 0 44px;
         }
